infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deltran
  labels:
    name: deltran
    environment: production
